mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: default
  labels:
    name: mysql-svc
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: http
    nodePort: 30066
  selector:
    app: mysql
