keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
      - keycloak.172.29.134.134.nip.io
  rules:
  - host: keycloak.172.29.134.134.nip.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
